# Cad

./: .gitignore  CMakeLists.txt  ClassDiagram.asta  QtCad.pro  README.md
src/: CMakeLists.txt
src/app/: App.cpp  App.h  CMakeLists.txt  Listener.h  Master.cpp  Origem.cpp  resources.qrc
src/app/command/: CMakeLists.txt  Cmd.cpp  Cmd.h
src/app/interaction/: CMakeLists.txt  UserI.cpp  UserI.h
src/app/interface/: CMakeLists.txt  MainScreen.h  MainView.cpp  MainView.h
src/app/main/: CMakeLists.txt  Origem.cpp
src/app/persist/: CMakeLists.txt  Persist.cpp  Persist.h
src/command/: CMakeLists.txt  Cmd.h  CmdClear.cpp  CmdClear.h  CmdClearAllItems.cpp  CmdClearAllItems.h  CmdClearLastItem.cpp  CmdClearLastItem.h  CmdClose.cpp  CmdClose.h  CmdCloseTab.cpp  CmdCloseTab.h  CmdDiscard.cpp  CmdDiscard.h  CmdDrawArch.cpp  CmdDrawArch.h  CmdDrawBezier.cpp  CmdDrawBezier.h  CmdDrawLine.cpp  CmdDrawLine.h  CmdIdle.h  CmdLoad.cpp  CmdLoad.h  CmdMouseClick.cpp  CmdMouseClick.h  CmdMouseMove.cpp  CmdMouseMove.h  CmdMousePress.cpp  CmdMousePress.h  CmdMouseRelease.cpp  CmdMouseRelease.h  CmdNew.cpp  CmdNew.h  CmdNewFile.cpp  CmdNewFile.h  CmdPrepareLine.cpp  CmdPrepareLine.h  CmdSave.cpp  CmdSave.h  CmdSetArch.cpp  (+23 more)
src/data/: Arch.cpp  Arch.h  Bezier.cpp  Bezier.h  CMakeLists.txt  Data.cpp  Data.h  File.cpp  File.h  Form.h  FormType.h  Geometry.cpp  Geometry.h  Instruction.h  Instructions.h  Item.cpp  Item.h  Line.cpp  Line.h  Point.cpp  Point.h
src/domain/: Arch.cpp  Arch.h  Bezier.cpp  Bezier.h  CMakeLists.txt  Data.h  Line.cpp  Line.h
src/interface/: ArchModel.cpp  ArchModel.h  AuxLineModel.cpp  AuxLineModel.h  BezierModel.cpp  BezierModel.h  CMakeLists.txt  LineModel.cpp  LineModel.h  MainScreen.cpp  MainScreen.h  MainView.cpp  MainView.h  Model.cpp  Model.h  NewFileWidget.cpp  NewFileWidget.h  Persist.cpp  Persist.h  Pixmap.cpp  Pixmap.h  STRUCTNEWFILE.h  View.cpp  View.h
src/manager/: CMakeLists.txt  Manager.cpp  Manager.h
src/persist/: CMakeLists.txt
